Contexto de apilamiento sin position

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,4 +100,12 @@ section:hover{
 }
 
 
+/* Sin position */
+.position__6{
+    margin-top: -50px;
+    margin-left: 30px;
+}
+
+
+
 /* Fin Stacking Context */
