--- a/css/styles.css
+++ b/css/styles.css
@@ -108,4 +108,98 @@ section:hover{
 
 
 
+/* Varios contextos de apilamientos */
+
+/* Contenedor 1 */
+.contenedor__position{
+    background-color: #f2dfe8df;
+    padding-top: 20px;
+    border: 5px solid #C7B4BC;
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+
+    position: relative;
+}
+.elemento__p{
+    background-color: #DAA2B9;
+    padding: 2rem;
+    text-align: center;
+    border-radius: 15px;
+    color: #000000;
+}
+
+/* Contenedor 2 y sus elementos*/
+.contenedor_2{
+    background-color: #DBCBD2;
+    width: 90%;
+    border: 2px solid #707070;
+    margin-left: auto;
+    margin-right: auto;
+
+    position: relative;
+}
+
+/* Elementos del contenedor 2 */
+.title__div{
+    text-align: center;
+    padding: 1.5rem;
+    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
+    color: #000;
+    background-color: #fff;
+    width: 60%;
+    opacity: 0.8;
+
+    position: relative;
+    z-index: 30;
+}
+.p__div_1{
+    border-top: 2px solid #707070;
+}
+.p__div{
+    padding: 0 1.5rem 0 1.5rem;
+}
+.p__div_ultimo{
+    padding: 0 1.5rem 0 1.5rem;
+    padding-bottom: 0;
+    margin: 0;
+
+}
+.lista__div{
+    margin: 0 2rem;
+}
+.lista__li::marker {
+  font-weight: bold; /* Aplica negrita al marcador */
+}
+.elemento__p, .div__position{
+    display: inline-block;
+}
+
+/* Elemento 1 */
+.caja__p_1{
+    margin: 0;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 20;
+}
+/* Elemento 2 */
+.caja__p_2{
+    margin: 0;
+
+    position: absolute;
+    top: 80%;
+    right: 0;
+    z-index: 40;
+    opacity: 0.85;
+}
+/* Elemento 3 */
+.caja__p_3{
+    margin-top: -30px;
+    margin-bottom: 0;
+}
+
 /* Fin Stacking Context */
