--- a/css/styles.css
+++ b/css/styles.css
@@ -3,46 +3,55 @@ body{
     background-color: #BEB7B7;
     font-family: Roboto, 'Courier New', Courier, monospace;
 }
+
 header{
-    font-size: 1.5rem;
-    background-color: #f6f2f7;
     padding: 0.8rem;
-    box-shadow: inset 0 0 10px #000;
+    background-color: #f6f2f7;
+    box-shadow: inset 0 0 15px 1px #000;
+    font-size: 1.5rem;
 }
 header:hover{
-    box-shadow: 0px 0px 40px #763F56;
+    box-shadow: inset 0px 0px 40px 8px #763f56c8;
 }
+
 main{
     font-size: 1.5rem;
 }
 
 h1{
-    color: #e9337f;
     text-align: center;
+    color: #e9337f;
     text-shadow: 5px 5px 10px #ffffff;
 }
 h2 {
     text-align: center;
-    color: #E68BBE;
     text-transform: capitalize;
+    color: #E68BBE;
 }
 h3{
-    color: #B18296;
     text-transform: capitalize;
+    color: #B18296;
 }
 
 section {
     padding: 0.8rem 3rem;
-    margin: 2rem 5rem;
+    margin: 0 2rem;
+    margin-top: 3rem;
     background-color: #f6f2f7;
     box-shadow: inset 0 0 10px #000;
 }
 section:hover{
-    box-shadow: 0px 0px 20px #763F56, inset 0px 0px 30px #763F56;
     border-radius: 8px;
+    box-shadow: 0px 0px 20px #763F56, inset 0px 0px 30px #763F56;
 }
 
-
+footer{
+    width: auto;
+    margin-top: 2rem;
+    padding: 1rem 0;
+    text-align: center;
+    background-color: #D6B5C3;
+}
 
 
 /* Stacking Context */
@@ -50,13 +59,13 @@ section:hover{
     margin: 1rem 5rem;
 }
 .bloques{
-    background-color: #B18296;
-    color: #f6f2f7;
     padding: 3%;
     width: 15%;
-    text-align: center;
     border: 2px solid #000;
     border-radius: 5px;
+    text-align: center;
+    background-color: #B18296;
+    color: #f6f2f7;
 }
 
 /* z-index */
@@ -112,48 +121,48 @@ section:hover{
 
 /* Contenedor 1 */
 .contenedor__position{
-    background-color: #f2dfe8df;
+    position: relative;
+
     padding-top: 20px;
     border: 5px solid #C7B4BC;
     width: 85%;
     margin-left: auto;
     margin-right: auto;
-
-    position: relative;
+    background-color: #f2dfe8df;
 }
 .elemento__p{
-    background-color: #DAA2B9;
     padding: 2rem;
-    text-align: center;
     border-radius: 15px;
+    text-align: center;
     color: #000000;
+    background-color: #DAA2B9;
 }
 
 /* Contenedor 2 y sus elementos*/
 .contenedor_2{
-    background-color: #DBCBD2;
+    position: relative;
+
     width: 90%;
-    border: 2px solid #707070;
     margin-left: auto;
     margin-right: auto;
-
-    position: relative;
+    border: 2px solid #707070;
+    background-color: #DBCBD2;
 }
 
 /* Elementos del contenedor 2 */
 .title__div{
-    text-align: center;
+    position: relative;
+    z-index: 30;
+
+    width: 60%;
     padding: 1.5rem;
     margin: 0;
     margin-left: auto;
     margin-right: auto;
-    color: #000;
+    text-align: center;
     background-color: #fff;
-    width: 60%;
+    color: #000;
     opacity: 0.8;
-
-    position: relative;
-    z-index: 30;
 }
 .p__div_1{
     border-top: 2px solid #707070;
@@ -188,12 +197,12 @@ section:hover{
 }
 /* Elemento 2 */
 .caja__p_2{
-    margin: 0;
-
     position: absolute;
     top: 80%;
     right: 0;
     z-index: 40;
+
+    margin: 0;
     opacity: 0.85;
 }
 /* Elemento 3 */
@@ -236,21 +245,18 @@ section:hover{
 
 /* Medidas con Width */
 .contenedor__width{
-    margin-left: auto;
-    margin-right: auto;
     width: 85%;
     padding: 2em;
-
+    margin-left: auto;
+    margin-right: auto;
     background-color: #D6B5C3;
 }
 .width__porcentual, .width__auto{
     margin-left: auto;
     margin-right: auto;
-
     text-align: center;
-
-    background-color: #fff;
     color: #6D394F;
+    background-color: #fff;
 }
 
 /* width % */
@@ -273,19 +279,16 @@ section:hover{
 
 /* Medidas con height */
 .contenedor__height{
-    margin-left: auto;
-    margin-right: auto;
     width: 85%;
     height: 8em;
-
+    margin-left: auto;
+    margin-right: auto;
     border: 5px solid #E6C4D2;
 }
 /* Height % */
 .height__porcentual{
     height: 45%;
-
     text-align: center;
-
     background-color: #E6C4D2;
     color: #6D394F;
 }
